Card clipping fixed and info panel start

--- a/style.css
+++ b/style.css
@@ -8,7 +8,8 @@ body {
     margin: 0;
 
     display: flex;
-    /*flex-direction: row-reverse;*/
+    overflow: hidden;
+    flex-direction: row-reverse;
 }
 
 
@@ -31,10 +32,11 @@ body {
 
 
 
-/* Deck */
-#deal {
+/* Sidebar */
+#side {
     width: 25%;
     height: 100%;
+    position: relative;
 
     background-color: rgb(79, 237, 185);
 
@@ -43,7 +45,20 @@ body {
     align-items: center;
 }
 
-#deck {
+#side #info {
+    height: 100%;
+    width: 100%;
+    position: absolute;
+    left: 100%;
+    top: 0;
+
+    background-color: white;
+
+    transition: 0.5s;
+}
+
+/* Card sizing */
+.card-sizing {
     height: 20vh;
     aspect-ratio: 5/7;
 
@@ -59,7 +74,7 @@ body {
     height: fit-content;
     max-height: 100vh;
     overflow-y: auto;
-    overflow-x: visible;
+    overflow-x: clip;
 
     background-color: aquamarine;
 
@@ -71,34 +86,28 @@ body {
 
 
 .card-silhouette {
-    height: 20vh;
-    aspect-ratio: 5/7;
     margin: 2.5vh 3vw 2.5vh 3vw;
-    position: relative;
 
     outline: 3px dashed rgba(0, 0, 0, 0.2);
     outline-offset: -4px;
-    border-radius: 1rem;
 }
 
+/*
 @media screen and (max-width: 1000px) {
     .card-silhouette {
         height: 42.5vh;
         aspect-ratio: 5/7;
         margin: 2.5vh 2.5vh 2.5vh 2.5vh;
-        position: relative;
     
         outline: 3px dashed rgba(0, 0, 0, 0.2);
         outline-offset: -4px;
         border-radius: 1rem;
     }
   }
-
+*/
 
 /* Cards */
 .card {
-    height: 100%;
-    aspect-ratio: 5/7;
     position: absolute;
     
     color: #0E0E0E;
@@ -108,7 +117,7 @@ body {
     pointer-events: none;
     
     transform-style: preserve-3d;
-    transition: 0.5s;
+    transition: left 0.5s, top 0.5s;
 }
 
 .card.diamonds, .card.hearts {
